<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Sample</string>

    <string name="action_settings">Settings</string>
    <string name="msg_welcome_message">Welcome to Sample!</string>

    <string name="label_channel_name_hint">Channel name</string>

    <string name="label_join">Join</string>
    <string name="label_set">Set</string>
    <string name="label_leave">Leave</string>
    <string name="label_login">Login</string>
    <string name="label_logout">Logout</string>
    <string name="label_mute">Mute</string>
    <string name="label_unmute">UnMute</string>

    <string name="label_audience">audience</string>
    <string name="label_host">host</string>


    <string name="label_uid">uid</string>

    <string name="msg_no_network_connection">No network connection, please check the network settings</string>

    <string name="msg_mute">Please mute</string>
    <string name="msg_unmute">Please unmute</string>
    <string name="msg_can_mute">You can mute</string>
    <string name="msg_can_unmute">You can unmute</string>

    <string name="msg_muted">Muted</string>
    <string name="msg_unmuted">UnMuted</string>
    <!--<string name="label_request">Request</string>-->
    <string name="label_null"></string>


    // DO NOT TRANSLATE
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="agora_app_id"></string>
    <string name="agora_access_token"></string>
    <string name="legal_channel_name_characters">a</string>

    <string name="channel_name">demo</string>

</resources>
