<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication0905.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login_name"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/label_channel_name_hint"
            android:inputType="text"
            android:layout_toLeftOf="@+id/button_join"
            android:lines="1"
            android:padding="5dp"
            android:textSize="10pt"
            android:textStyle="bold"
            android:text="host"

            />

        <CheckBox
            android:id="@+id/host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:onClick="onCheckHost"
            android:checked="true"
            android:text="host" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="onClickLogin"
            android:enabled="true"
            android:textSize="6pt"
            android:text="@string/label_login" />
        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="onClickLogout"
            android:enabled="true"
            android:textSize="6pt"
            android:text="@string/label_logout" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="170dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/login_status"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:lines="1"
                android:textSize="8pt"
                android:text=""
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/profile_name"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:gravity="center"
                android:inputType="text"
                android:lines="1"
                android:textSize="6pt"
                android:entries="@array/profile_items"

                />
            <Spinner
                android:id="@+id/scenario_name"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:inputType="text"
                android:lines="1"
                android:textSize="6pt"
                android:entries="@array/scenario_items"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/channel_name"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/label_channel_name_hint"
                android:inputType="text"
                android:layout_toLeftOf="@+id/button_join"
                android:lines="1"
                android:textSize="10pt"
                android:textStyle="bold"
                android:text="@string/channel_name"

                />
            <Button
                android:id="@+id/button_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="10dp"
                android:textSize="6pt"
                android:onClick="onClickJoin"
                android:enabled="true"
                android:text="@string/label_join" />
            <Button
                android:id="@+id/button_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="6pt"
                android:onClick="onClickLeave"
                android:enabled="true"
                android:text="@string/label_leave" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="170dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/join_status"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:gravity="center"
            android:inputType="text"
            android:lines="1"
            android:textSize="8pt"
            android:text=""
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
       <TextView
                android:id="@+id/textView1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:text="@string/label_uid" />

        <TextView
            android:id="@+id/textReq1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/label_null" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:onClick="onVoiceMuteClicked1"
            android:text="@string/label_mute" />
        <Button
            android:id="@+id/button1unmute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:onClick="onVoiceUnMuteClicked1"
            android:text="@string/label_unmute" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/label_uid" />

        <TextView
            android:id="@+id/textReq2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/label_null" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:onClick="onVoiceMuteClicked2"
            android:text="@string/label_mute" />
        <Button
            android:id="@+id/button2unmute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:onClick="onVoiceUnMuteClicked2"
            android:text="@string/label_unmute" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:text="@string/label_uid" />

        <TextView
            android:id="@+id/textReq3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:text="@string/label_null" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:onClick="onVoiceMuteClicked3"
            android:text="@string/label_mute" />
        <Button
            android:id="@+id/button3unmute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:onClick="onVoiceUnMuteClicked3"
            android:text="@string/label_unmute" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonMute"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="350dp"
            android:onClick="onClickSendMsgMute"
            android:text="sendMessage(Mute)" />
        <Button
            android:id="@+id/buttonUnMute"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:onClick="onClickSendMsgUnMute"
            android:text="sendMessage(UnMute)" />

    </LinearLayout>



</RelativeLayout>

